--- a/views/editRecipe.ejs
+++ b/views/editRecipe.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header'); -%>
+<%- include('partials/header') -%>
 
 <form action="/recipes/<%= recipe._id %>/edit" method="POST" class="editForm">
     <h2>Edit Recipe: <%= recipe.name %></h2>
@@ -15,4 +15,4 @@
     <button type="submit">Update Recipe</button>
 </form>
 
-<%- include('partials/footer'); -%>
+<%- include('partials/footer') -%>
