--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header'); -%>
+<%- include('partials/header') -%>
 
 <header>
   <div class="recipe">
@@ -18,4 +18,4 @@
 
 
 
-<%- include('partials/footer'); -%>
+<%- include('partials/footer') -%>
