--- a/views/recipeDetail.ejs
+++ b/views/recipeDetail.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header'); -%>
+<%- include('partials/header') -%>
 
 <header>
 
@@ -35,23 +35,23 @@
     method: 'DELETE'
 })
 .then(response => {
-    console.log(response.headers.get('Content-Type')); 
+    console.log(response.headers.get('Content-Type'))
     if (response.headers.get('Content-Type').includes('application/json')) {
-        return response.json();
+        return response.json()
     } else {
-        throw new Error('Non-JSON response received');
+        throw new Error('Non-JSON response received')
     }
 })
 .then(data => {
-    alert(data.message); 
+    alert(data.message)
     if(data.success) {
-        window.location.href = '/recipes'; 
+        window.location.href = '/recipes'
     }
 })
 .catch(error => {
-    console.error('Error:', error);
-    alert('Failed to delete the recipe.'); 
-});
+    console.error('Error:', error)
+    alert('Failed to delete the recipe.') 
+})
 
         }
     }
@@ -59,4 +59,4 @@
    
     </script>
 
-<%- include('partials/footer'); -%>
+<%- include('partials/footer') -%>
