--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,46 +16,46 @@
 </form>
 
 <script>
-    const form = document.querySelector('form');
-    const emailError = document.querySelector('.email.error');
-    const usernameError = document.querySelector('.username.error');
-    const passwordError = document.querySelector('.password.error');
+    const form = document.querySelector('form')
+    const emailError = document.querySelector('.email.error')
+    const usernameError = document.querySelector('.username.error')
+    const passwordError = document.querySelector('.password.error')
 
     form.addEventListener('submit', async (e) => {
-        e.preventDefault();
+        e.preventDefault()
 
         // Reset errors
-        emailError.textContent = '';
-        usernameError.textContent = '';
-        passwordError.textContent = '';
+        emailError.textContent = ''
+        usernameError.textContent = ''
+        passwordError.textContent = ''
 
         // Get values from the form inputs
-        const email = form.email.value;
-        const username = form.username.value;  
-        const password = form.password.value;
+        const email = form.email.value
+        const username = form.username.value
+        const password = form.password.value
 
         try {
             const res = await fetch('/signup', {
                 method: 'POST',
                 body: JSON.stringify({ email, username, password }), 
                 headers: {'Content-Type': 'application/json'}
-            });
+            })
 
-            const data = await res.json();
+            const data = await res.json()
 
             if (data.errors) {
-                emailError.textContent = data.errors.email;
-                usernameError.textContent = data.errors.username;
-                passwordError.textContent = data.errors.password;
+                emailError.textContent = data.errors.email
+                usernameError.textContent = data.errors.username
+                passwordError.textContent = data.errors.password
             }
 
             if (data.user) {
-                location.assign('/');
+                location.assign('/')
             }
         } catch (err) {
-            console.error('An error occurred:', err);
+            console.error('An error occurred:', err)
         }
-    });
+    })
 </script>
 
 
